# spirv-compute-sanitizer

./: .gitignore  Makefile  README.md
common/: cl.c
common/include/: cl.h
kernel/: add-sized.cl  add.cl  hello.cl  ng-barrier-misuse.cl  ng-local-conflict.cl  ng-out-of-bound-access-sized.cl  ng-out-of-bound-access.cl
plugin/: .gitignore  CMakeLists.txt  Plugin.cc  SPIRVComputeSanitizer.cc  SPIRVComputeSanitizer.h
runner/: a-b-c-sized.c  a-b-c.c  in-out-size.c
runner/include/: common.h
runtime/: lib.cl  report.cl  shadow.cl
scripts/: spirv-comp-sanitize.sh
